# gpn-hack

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
crawler/energybase/: catalog.go  company.go  energybase.go  go.mod  go.sum
crawler/energybase/cmd/debug/: main.go
crawler/energybase/cmd/main/: main.go
crawler/neftegaz/: Makefile  catalog.go  company.go  energybase.go  go.mod  go.sum  neftegaz.go
crawler/neftegaz/cmd/debug/: main.go
crawler/neftegaz/cmd/main/: main.go
datamining-toolbox/: .gitignore  README.md  pyproject.toml  setup.cfg
datamining-toolbox/.devcontainer/: Dockerfile  devcontainer.json
datamining-toolbox/docker/: Dockerfile  docker-entrypoint.sh
datamining-toolbox/src/gpn_hack/: embedder.py  hh.py  luigi.cfg.sample  luigi_tasks.py  qdrant.py  scrappers.py  utils.py
datamining-toolbox/src/gpn_hack/luigi_tasks/: __init__.py  common.py  hh.py  index.py
datamining-toolbox/tests/gpn_hack/: test_embedder.py
deploy/: update.sh
elasticsearch-comrade-clusters/: default.json
embedder/: preprocess.py
frontend/: Dockerfile  Dockerfile.prod  README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Autocomplete.js  Layout.js  LayoutSidebar.js  PagingInfo.js  ResultsPerPage.js  SearchBox.js  index.js
imageserver/: .gitignore  Dockerfile  Makefile  config.example.env  go.mod  go.sum  imageserver.go
imageserver/cmd/main/: main.go
imageserver/screenshoter/: config.go  screenshoter.go
imageserver/server/: config.go  screenshot.go  server.go
imageserver/storage/: config.go  get.go  storage.go  upload.go
manti/: init.py
manti/data/: README.MD
manticore/: docker-compose.yml  manticore.conf  simple.py
manticore/data/: manticore.json
manticore/data/companies/: companies.ram
qdrant/: docker-compose.yml  init.sh  qdrant-indexer.py  qdrant-simillar-example.py
qdrant/data_qdrant/collections/test_collection/: config.json
qdrant/data_qdrant/collections/test_collection/segments/06fd62fb-8c4d-4d99-9c32-99ea952e3516/id_mapper/: IDENTITY  LOG  OPTIONS-000006
qdrant/data_qdrant/collections/test_collection/segments/06fd62fb-8c4d-4d99-9c32-99ea952e3516/payload_storage/: IDENTITY  LOG  OPTIONS-000006
qdrant/data_qdrant/collections/test_collection/segments/d6abe781-7d25-44b5-94a1-fbb586022a57/: segment.json
qdrant_indexer/: main.py
(+41 files in other folders)
