[tool.poetry]
name = "gpn-hack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
poetry = "^1.1.8"
Scrapy = "^2.5.0"
fasttext = "^0.9.2"
ipykernel = "^6.2.0"
pandas = "^1.3.2"
scipy = "^1.7.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
